--- a/index.html
+++ b/index.html
@@ -15,6 +15,13 @@
             <button type="submit">ADD</button>
     
         </form>
+        <div class="task">
+            <div>
+                <p>Title here</p>
+                <span>Description Here</span>
+            </div>
+            <button class="delete">-</button>
+        </div>
     </div>
     
 </body>
