--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <p>Title here</p>
                 <span>Description Here</span>
             </div>
-            <button class="delete">-</button>
+            <button class="deleteBtn">-</button>
         </div>
     </div>
     
