--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
             <button type="submit">ADD</button>
     
         </form>
-        <div class="task">
+        <!-- <div class="task">
             <div>
                 <p>Title here</p>
                 <span>Description Here</span>
             </div>
             <button class="deleteBtn">-</button>
-        </div>
+        </div> -->
     </div>
     
 </body>
